--- a/frontend/src/Components/Login/home.module.css
+++ b/frontend/src/Components/Login/home.module.css
@@ -105,8 +105,9 @@ font-family: 'Unica One', cursive;*/
   width: 49%;
 }
 .pages {
+  max-height: 230px;
+  min-height: 230px;
 }
-
 .pagess {
   box-shadow: 0px 0px 5px rgb(184, 184, 184);
   border-radius: 5px;
@@ -132,6 +133,8 @@ font-family: 'Unica One', cursive;*/
   -ms-transition: all ease-in-out 0.3s;
   background-color: white;
   -o-transition: all ease-in-out 0.3s;
+  min-height: 67px;
+  max-height: 67px;
 }
 
 .icon {
@@ -182,7 +185,8 @@ font-family: 'Unica One', cursive;*/
   border-bottom: 0.25px solid #dfdfdf;
 }
 
-.pages .bottom {
+.pages .bottom,
+.pages .bottom:hover {
   border-top: 0.25px solid #dfdfdf;
 
   border-radius: 0 0 5px 5px;
@@ -209,14 +213,16 @@ font-family: 'Unica One', cursive;*/
   outline: none;
   border-left: 5px solid rgb(77, 128, 11);
 }
-
+.pages a:hover h3 {
+  padding: 15px;
+}
 .pages a:hover h3 span,
 .pages a:active h3 span {
   color: rgb(77, 128, 11);
   letter-spacing: 5px;
   font-weight: 600;
   font-size: 32px;
-  padding: 12px;
+  padding: 5px;
 }
 
 .pages a:hover h3,
@@ -230,10 +236,6 @@ font-family: 'Unica One', cursive;*/
   color: white;
   font-size: 36px;
   padding-left: 80px;
-  animation-name: move;
-  animation-duration: 0.5s;
-  animation-delay: 0.1s;
-  animation-fill-mode: forwards;
 }
 
 @keyframes move {
