--- a/frontend/src/Components/Carousel/carousel.module.css
+++ b/frontend/src/Components/Carousel/carousel.module.css
@@ -76,9 +76,20 @@
     height: 280px;
   }
   .full {
-    width: 80%;
-    margin: 0 10%;
+    width: 100%;
     height: 37vh;
-    border-bottom: 0.5px solid #c7f3c7;
+    margin-left: 10px;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .full p {
+    width: 105%;
+    font-size: 13px;
+  }
+
+  .img {
+    max-width: 230px;
+    max-height: 160px;
   }
 }
