--- a/frontend/src/Header/Header.module.css
+++ b/frontend/src/Header/Header.module.css
@@ -24,7 +24,7 @@
   align-items: center;
   background-color: #04a045;
   height: 10vh;
-  box-shadow: -1px 2px 10px black;
+  box-shadow: -1px 2px 10px rgb(82, 82, 82);
 }
 .flex {
   display: flex;
