--- a/frontend/src/Components/Help/Help.module.css
+++ b/frontend/src/Components/Help/Help.module.css
@@ -1,7 +1,7 @@
 .page {
   background-color: #d8f5d8;
   z-index: 10;
-  padding-top: 40px;
+  padding-top: 60px;
   padding-bottom: 30px;
   z-index: 1;
   position: relative;
@@ -17,12 +17,12 @@
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
-  box-shadow: 1px 1px 10px rgb(201, 201, 201);
+  box-shadow: 1px 1px 10px rgb(156, 156, 156);
+  border: 1px solid #04a045;
 }
 
 .small {
   cursor: pointer;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -34,7 +34,6 @@
   animation-name: up;
   animation-duration: 0.75s;
   animation-fill-mode: forwards;
-
   border-top: 1px solid #087535;
 }
 .heading {
@@ -132,7 +131,8 @@
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
-  box-shadow: 1px 1px 10px rgb(201, 201, 201);
+  box-shadow: 0 0 10px rgb(128, 128, 128);
+  border: 1px solid #04a045;
 }
 
 .faq .heading {
@@ -200,12 +200,14 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  box-shadow: 1px 1px 10px rgb(211, 211, 211);
+  box-shadow: 1px 1px 10px rgb(145, 145, 145);
   border-radius: 15px;
   -webkit-border-radius: 15px;
   -moz-border-radius: 15px;
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
+  box-shadow: 1px 1px 10px rgb(156, 156, 156);
+  border: 1px solid #087535;
 }
 
 .add {
@@ -238,4 +240,53 @@
 .faqques {
   letter-spacing: 1px;
   font-size: 18px;
+}
+.fifty {
+  position: absolute;
+  right: 4%;
+  top: 20px;
+}
+.select {
+  width: 40%;
+  margin: auto;
+  padding: 2px 2px;
+  min-width: 250px;
+  max-width: 350px;
+}
+
+.select a {
+  box-shadow: 1px 1px 10px rgb(156, 156, 156);
+
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  font-size: 18px;
+  letter-spacing: 2px;
+  min-width: none;
+  border: 1px solid #04a045;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+  z-index: 1;
+  background-color: rgb(248, 248, 248);
+  padding: 7px;
+  color: #04a045;
+  text-transform: uppercase;
+  font-family: "Gemunu Libre", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  transition: all ease 0.4s;
+  -webkit-transition: all ease 0.4s;
+  -moz-transition: all ease 0.4s;
+  -ms-transition: all ease 0.4s;
+  -o-transition: all ease 0.4s;
+  border-color: #009c00;
+}
+
+.select a:hover {
+  background-color: #04a045;
+  color: white;
+  letter-spacing: 2px;
 }
