--- a/frontend/src/Footer/Footer.module.css
+++ b/frontend/src/Footer/Footer.module.css
@@ -3,7 +3,7 @@
   background-color: #087535;
   color: rgb(233, 233, 233);
   padding: 5px;
-  width: 99%;
+  width: 99.5%;
   margin: auto;
   margin-top: 50px;
   z-index: 500;
@@ -12,6 +12,7 @@
   padding-top: 60px;
   overflow-x: hidden;
   box-shadow: 0 0 10px rgb(83, 83, 83);
+  padding: 20px;
 }
 
 .img,
