--- a/frontend/src/Ui/Backdrop/Backdrop.module.css
+++ b/frontend/src/Ui/Backdrop/Backdrop.module.css
@@ -6,5 +6,6 @@
 	z-index:100;
 	left: 0;
 	top: 0;
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0, 0, 0, 0.781);
+	filter: blur(8px);
 }
