--- a/frontend/src/Components/NGO/Inspect/Inspect.module.css
+++ b/frontend/src/Components/NGO/Inspect/Inspect.module.css
@@ -337,15 +337,7 @@
   .logo {
     height: 10vh;
   }
-  .select {
-    max-width: 200px;
-    margin-right: 0;
-  }
-  .select a {
-    font-size: 18px;
-    min-width: 150px;
-    max-width: 200px;
-  }
+
   .pages {
     margin-top: 10px;
   }
@@ -358,14 +350,7 @@
     flex: 30%;
     width: 30%;
   }
-  .select {
-    padding: 5px;
-    min-width: 150px;
-    margin-right: 10px;
-  }
-  .select a {
-    min-width: 140px;
-  }
+
   .inp {
     width: 90%;
   }
@@ -392,20 +377,94 @@
     font-size: 30px;
     letter-spacing: 2px;
   }
-  .select {
-    padding: 3px;
-    min-width: 100px;
-    margin-right: 20px;
-  }
-  .select a {
-    min-width: 100px;
-    font-size: 16px;
-  }
+
   .cont {
     font-size: 12px;
   }
   .box {
     min-width: 300px;
     margin: 100px auto;
+  }
+}
+
+.nope {
+  width: 40%;
+  margin: auto;
+  background-color: white;
+  box-shadow: 0 0 10px rgb(83, 83, 83);
+  padding: 50px 10px;
+  min-width: 330px;
+  font-size: 24px;
+  text-align: center;
+}
+
+.nopep {
+  font-size: 30px;
+}
+
+.select {
+  width: 40%;
+  margin: auto;
+  padding: 2px 2px;
+  min-width: 250px;
+  text-align: center !important;
+  max-width: 350px;
+}
+
+.select a {
+  box-shadow: 1px 1px 10px rgb(156, 156, 156);
+
+  text-align: center !important;
+  display: block;
+  text-decoration: none;
+  font-size: 18px;
+  letter-spacing: 2px;
+  min-width: none;
+  border: 1px solid #04a045;
+  border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  -ms-border-radius: 100px;
+  -o-border-radius: 100px;
+  z-index: 1;
+  background-color: rgb(248, 248, 248);
+  padding: 7px;
+  color: #04a045;
+  text-transform: uppercase;
+  font-family: "Gemunu Libre", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  transition: all ease 0.4s;
+  -webkit-transition: all ease 0.4s;
+  -moz-transition: all ease 0.4s;
+  -ms-transition: all ease 0.4s;
+  -o-transition: all ease 0.4s;
+  border-color: #009c00;
+  background-color: #04a045;
+  color: white;
+}
+
+.select a:hover {
+  background-color: white;
+  color: #04a045;
+  box-shadow: 0 0 10px #04a045;
+  letter-spacing: 2px;
+}
+
+@media all and (max-width: 800px) {
+  .fifty {
+    width: 100%;
+  }
+
+  .nope {
+    font-size: 20px;
+    margin-top: 20px;
+  }
+
+  .nopep {
+    font-size: 24px;
+  }
+  .select a {
+    font-size: 20px;
   }
 }
