--- a/frontend/src/Header/Header.module.css
+++ b/frontend/src/Header/Header.module.css
@@ -92,12 +92,6 @@
   font-weight: 300;
   color: white;
 }
-.yellow {
-  color: #eebe39;
-  font-weight: 500;
-  font-size: 20px;
-  margin: 0 3px 0 0;
-}
 
 .right {
   display: flex;
@@ -107,8 +101,8 @@
   border-bottom: 2px solid #04a045;
 }
 
-.right:hover,
-li a:hover {
+.flex .right:hover,
+.flex li a:hover {
   border-bottom: 2px solid #c3e0cf;
 }
 
@@ -269,8 +263,8 @@ li a:hover {
 }
 
 .icon {
-  color: #e7b62d;
-  stroke: #e7b62d;
+  color: #f4f4f4;
+  stroke: #f4f4f4;
 }
 
 .icon {
@@ -283,7 +277,7 @@ li a:hover {
 }
 
 .flex li a:hover .yellow {
-  border-bottom: 1px solid #e7b62d;
+  border-bottom: 1px solid #f4f4f4;
 }
 
 /**/
@@ -390,7 +384,7 @@ li a:hover {
 .lines1 {
   width: 20px;
   height: 2.5px;
-  background-color: #e7b62d;
+  background-color: #f4f4f4;
   margin: 4px 0;
   animation-name: openl1;
   animation-duration: 0.5s;
@@ -398,7 +392,7 @@ li a:hover {
 }
 .lines2 {
   height: 2.5px;
-  background-color: #e7b62d;
+  background-color: #f4f4f4;
   margin: 4px 0;
   animation-name: openl2;
   animation-duration: 0.5s;
@@ -407,7 +401,7 @@ li a:hover {
 .lines3 {
   width: 20px;
   height: 2.5px;
-  background-color: #e7b62d;
+  background-color: #f4f4f4;
   margin: 4px 0;
   animation-name: openl3;
   animation-duration: 0.5s;
@@ -417,7 +411,7 @@ li a:hover {
 .lines4 {
   width: 20px;
   height: 2.5px;
-  background-color: #e7b62d;
+  background-color: #f4f4f4;
   margin: 4px 0;
   animation-name: closel1;
   animation-duration: 0.5s;
@@ -434,7 +428,7 @@ li a:hover {
 .lines6 {
   width: 20px;
   height: 2.5px;
-  background-color: #e7b62d;
+  background-color: #f4f4f4;
   margin: 4px 0;
   animation-name: closel3;
   animation-duration: 0.5s;
@@ -508,7 +502,7 @@ li a:hover {
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
   z-index: 10001;
-  background-color: #035c81;
+  background-color: #04a045;
 }
 .menuc ul {
   width: 0vw;
@@ -520,7 +514,7 @@ li a:hover {
   display: none;
 }
 .menuo {
-  background-color: #035c81;
+  background-color: #04a045;
   z-index: 10001;
   animation-name: open;
   animation-duration: 0.5s;
@@ -542,14 +536,14 @@ li a:hover {
   padding-top: 20px;
   margin: 0;
   list-style-type: none;
-  background-color: #035c81;
-  box-shadow: 2px 2px 10px #035c81;
+  background-color: #04a045;
+  box-shadow: 2px 2px 10px #04a045;
 }
 
 .flex2 li {
   width: 80%;
   margin: 5px 10%;
-  border-bottom: 1px solid #e7b62d;
+  border-bottom: 1px solid #f4f4f4;
 }
 .flex2 li a {
   text-decoration: none;
@@ -559,18 +553,14 @@ li a:hover {
   color: white;
   padding: 15px;
   font-weight: 300;
-  font-size: 14px;
+  font-size: 16px;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding-left: 25px;
 }
-.flex2 li a:hover,
-.flex2 li a:active {
-  border-left: 3px solid #e7b62d;
-  padding-left: 22px;
-}
+
 .active2 {
-  border-left: 10px solid #e7b62d !important;
+  border-left: 10px solid #f4f4f4 !important;
   padding-left: 15px !important;
 }
 .botc {
@@ -602,8 +592,8 @@ li a:hover {
 
 .bot ul li a:link,
 .bot ul li a:visited {
-  color: #e7b62d;
-  border-bottom: 0px solid #e7b62d;
+  color: #f4f4f4;
+  border-bottom: 0px solid #f4f4f4;
   padding: 5px;
   padding-bottom: 5px;
   transition: all ease 0.4s;
@@ -615,9 +605,9 @@ li a:hover {
 
 .bot ul li a:hover,
 .bot ul li a:active {
-  border-bottom: 2px solid #e7b62d;
+  border-bottom: 2px solid #f4f4f4;
 }
-@media all and (max-width: 900px) {
+@media all and (max-width:950px) {
   .flex,
   .right {
     display: none;
