--- a/frontend/src/Components/Login/home.module.css
+++ b/frontend/src/Components/Login/home.module.css
@@ -49,7 +49,7 @@ font-family: 'Unica One', cursive;*/
   margin: 0 20px 0 0;
 }
 .box {
-  font-family: "Monoton", cursive;
+  font-family: 'Staatliches', cursive;
   font-size: 48px;
   letter-spacing: 3px;
   color: #009c00;
