--- a/frontend/src/Components/Admin/Add/Add.module.css
+++ b/frontend/src/Components/Admin/Add/Add.module.css
@@ -25,13 +25,13 @@
 
 .open1,
 .open2 {
+  z-index: 10;
   cursor: pointer;
   text-align: center;
   width: 50%;
   margin: 40px auto;
   position: relative;
-  padding: 20px;
-  padding-bottom: 20px;
+
   min-width: 350px;
   border-radius: 20px;
   -webkit-border-radius: 20px;
@@ -240,4 +240,40 @@
     min-width: 300px;
     margin: 100px auto;
   }
+  .inp,
+  .txt,
+  .btn,
+  .btn2 {
+    min-width: 0;
+  }
+  .open1,
+  .open2 {
+    width: 90%;
+    min-width: 300px;
+    margin: 20px auto;
+  }
+}
+
+.add1 {
+  background-color: #c6f0d8;
+  padding: 20px;
+  padding-bottom: 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  box-shadow: 0px 1px 10px rgb(124, 124, 124);
+}
+
+.close1 {
+  background-color: rgb(241, 192, 192);
+  padding: 20px;
+  padding-bottom: 20px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  box-shadow: 0px 0px 10px rgb(124, 124, 124);
 }
