--- a/frontend/src/Components/Cards/Report/Report.module.css
+++ b/frontend/src/Components/Cards/Report/Report.module.css
@@ -98,18 +98,21 @@
 @media all and (max-width: 1200px) {
   .tile {
     width: 93%;
+    margin: 25px auto;
   }
 }
 
 @media all and (max-width: 800px) {
   .tile {
     width: 91%;
+    margin: 20px auto;
   }
 }
 
 @media all and (max-width: 650px) {
   .tile {
-    width: 88%;
+    width: 86%;
+    margin: 15px auto;
   }
 
   .btn {
