--- a/frontend/src/Header/Header.module.css
+++ b/frontend/src/Header/Header.module.css
@@ -1,5 +1,5 @@
 .header {
-  font-family: 'Staatliches', cursive;
+  font-family: "Staatliches", cursive;
   min-height: 76px;
   position: fixed;
   top: 0;
@@ -13,7 +13,7 @@
 }
 .bold {
   min-height: 76px;
-  font-family: 'Staatliches', cursive;
+  font-family: "Staatliches", cursive;
   position: fixed;
   top: 0;
   left: 0;
@@ -87,7 +87,7 @@
   z-index: -1;
 }
 .name {
-  font-family: 'Staatliches', cursive;
+  font-family: "Staatliches", cursive;
   font-size: 34px;
   font-weight: 300;
   color: white;
@@ -439,7 +439,7 @@
   top: 11vh;
   left: 0%;
   z-index: 1001;
-  font-family: 'Staatliches', cursive;
+  font-family: "Staatliches", cursive;
   min-height: 76px;
   position: fixed;
   display: none;
@@ -456,7 +456,7 @@
   top: 11vh;
   left: 0%;
   z-index: 1001;
-  font-family: 'Staatliches', cursive;
+  font-family: "Staatliches", cursive;
   min-height: 76px;
   position: fixed;
   display: none;
@@ -553,10 +553,12 @@
   color: white;
   padding: 15px;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 18px;
   text-transform: uppercase;
   letter-spacing: 2px;
   padding-left: 25px;
+  font-weight: 200;
+  letter-spacing: 4px;
 }
 
 .active2 {
@@ -607,7 +609,7 @@
 .bot ul li a:active {
   border-bottom: 2px solid #f4f4f4;
 }
-@media all and (max-width:950px) {
+@media all and (max-width: 950px) {
   .flex,
   .right {
     display: none;
