--- a/frontend/src/Ui/Home/Info.module.css
+++ b/frontend/src/Ui/Home/Info.module.css
@@ -12,7 +12,7 @@
 .inside2,
 .inside3 {
   background-color: #04a045;
-  margin: 20px;
+  margin: 30px 20px;
   flex: 40%;
   padding: 20px;
   padding-top: 40px;
