--- a/frontend/src/Footer/Footer.module.css
+++ b/frontend/src/Footer/Footer.module.css
@@ -1,18 +1,19 @@
 .footer {
+  font-family: "Montserrat", sans-serif;
+
   text-align: center;
   background-color: #087535;
   color: rgb(233, 233, 233);
   padding: 5px;
   width: 99.5%;
   margin: auto;
-  margin-top: 50px;
-  z-index: 99;
+  margin-top: 100px;
+  z-index: 500000;
   font-size: 16px;
   position: relative;
-  padding-top: 60px;
-  overflow-x: hidden;
   box-shadow: 0 0 10px rgb(83, 83, 83);
-  padding: 20px;
+  padding: 0;
+  padding-top: 100px;
 }
 
 .img,
@@ -35,7 +36,26 @@
 
 .fitemli {
   list-style-type: none;
-  flex: 25%;
+  width: 30%;
+  flex: 30%;
+  text-align: center;
+  padding-left: 0;
+}
+
+.fitemli h2 {
+  font-size: 26px;
+  letter-spacing: 2px;
+  color: #8cdaa6;
+}
+
+.fitemli h2::after {
+  margin: auto;
+  width: 100px;
+  text-align: center;
+  background-color: #04a045;
+  content: " ";
+  border: 1px solid #04a045;
+  margin-left: 20px;
 }
 .fitems {
   margin: 10px 0;
@@ -69,10 +89,11 @@
 }
 
 .fitemsm {
-  display: block;
+  display: flex;
+  justify-content: space-evenly;
   margin: auto;
   text-align: center;
-  width: 22vw;
+  width: 60vw;
 }
 .fitemsm .fitemli {
   margin-top: 20px;
@@ -118,5 +139,124 @@
   }
   .footer {
     min-height: 432px;
+  }
+}
+
+.air {
+  position: absolute;
+  top: -50px;
+  background-color: #0d395a;
+  width: 60%;
+  left: 20%;
+  height: 150px;
+  box-shadow: 0 0 10px rgb(51, 51, 51);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+}
+
+.air h3 {
+  font-weight: 100px;
+  letter-spacing: 2px;
+  padding-top: 10px;
+}
+.fifty {
+  width: 100%;
+}
+.but1,
+.but2 {
+  margin: 10px;
+  display: inline-block;
+  padding: 10px 30px;
+  border: 1px solid #04a045;
+  border-radius: 100px;
+  text-decoration: none;
+  letter-spacing: 2px;
+  text-align: center;
+  transition: all ease 0.3s;
+  -webkit-transition: all ease 0.3s;
+  -moz-transition: all ease 0.3s;
+  -ms-transition: all ease 0.3s;
+  -o-transition: all ease 0.3s;
+  text-transform: uppercase;
+  width: 30%;
+  font-size: 16px;
+}
+
+.but1:link,
+.but1:visited {
+  background-color: #04a045;
+  margin-right: 20px;
+  color: white;
+  font-weight: 500;
+}
+
+.but1:hover,
+.but1:active {
+  background-color: rgb(233, 233, 233);
+  color: #05662d;
+  border: 1px solid #04a045;
+  font-weight: 500;
+  letter-spacing: 3px;
+  box-shadow: 0 0 10px white;
+}
+
+.but2:link,
+.but2:visited {
+  color: white;
+  border-color: white;
+  background-color: transparent;
+  font-weight: 500;
+}
+.but2:hover,
+.but2:active {
+  background-color: rgb(233, 233, 233);
+  color: #017c34;
+  border: 1px solid #04a045;
+  font-weight: 500;
+  letter-spacing: 3px;
+  box-shadow: 0 0 10px white;
+}
+
+@media all and (max-width: 740px) {
+  .air {
+    width: 80vw;
+    left: 10vw;
+    margin: auto;
+  }
+}
+
+@media all and (max-width: 600px) {
+  .air {
+    width: 90vw;
+    left: 5vw;
+    margin: auto;
+  }
+}
+
+@media all and (max-width: 500px) {
+  .footer {
+    padding: 0;
+    padding-top: 150px;
+  }
+  .air {
+    width: 96vw;
+    left: 2vw;
+    margin: auto;
+    height: 200px;
+    box-shadow: 0 0 5px rgb(87, 87, 87);
+  }
+  .but1,
+  .but2 {
+    width: 80%;
+    margin: 10px auto;
+    padding: 8px;
+    font-size: 14px;
+  }
+  .but1:link,
+  .but1:visited {
+    margin-right: 0;
   }
 }
