--- a/frontend/src/Footer/Footer.module.css
+++ b/frontend/src/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   font-family: "Montserrat", sans-serif;
 
   text-align: center;
-  background-color: #087535;
+  background-color: #0d395a;
   color: rgb(233, 233, 233);
   padding: 5px;
   width: 99.5%;
@@ -108,7 +108,7 @@
 
 .fitemli li a:hover,
 .fitemli li a:active {
-  color: #a70407;
+  color: #FF3100;
 }
 
 @media (max-width: 767px) {
@@ -145,7 +145,7 @@
 .air {
   position: absolute;
   top: -50px;
-  background-color: #0d395a;
+  background-color: #087535;
   width: 60%;
   left: 20%;
   height: 150px;
