--- a/frontend/src/Ui/Spinner/Spinner.module.css
+++ b/frontend/src/Ui/Spinner/Spinner.module.css
@@ -24,7 +24,7 @@
     display: inline-block;
     position: absolute;
     top: 0;
-    background-color: #04a045;
+    background-color: #0d395a;
     border-radius: 100%;
     
     -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
